--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 
 <! Navbar----------------------------->
 
-<div class="h4 pb-2 mb-4 text-danger border-top border-dark"></div>
+<div class="text-danger border-top border-dark"></div>
 
 <! LogIn, SignUp, LogOut----------------------------->
 
@@ -154,7 +154,9 @@
 
 <! LogIn, SignUp, LogOut----------------------------->
 
-{% block content %}
-{% endblock %}
+<div class="add_recipe_frame">
+    {% block content %}
+    {% endblock %}
+</div>
 </body>
 </html>
