--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
-
+<div class="ms-3">
     <h2>Рецепты</h2>
     {% for recipe in recipes %}
         <div class="card mb-3" style="max-width: 540px;">
@@ -21,5 +21,5 @@
             </div>
         </div>
     {% endfor %}
-
+</div>
 {% endblock %}
