--- a/templates/main.html
+++ b/templates/main.html
@@ -8,8 +8,7 @@
     <div class="ms-3">
         <h2>Рецепты</h2>
         {% for recipe in recipes %}
-            <a href="{{ url_for('recipe', id=recipe.id)}}">
-            <div class="card mb-3" style="max-width: 540px;">
+            <div onclick="location.href='{{ url_for('recipe', id=recipe.id)}}'"  class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
                               <img src="..." class="img-fluid rounded-start" alt="...">
@@ -25,7 +24,6 @@
                     </div>
                 </div>
             </div>
-            </a>
         {% endfor %}
     </div>
 {% endblock %}
