--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,6 +18,9 @@
                             {{ recipe.type }} | Порций: {{ recipe.number_of_serving }}</small></p>
                     </div>
                 </div>
+                <div>
+                    <button class="btn btn-secondary">Редактировать</button>
+                </div>
             </div>
         </div>
     {% endfor %}
