+ edit, delete recipe

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn btn-secondary">Редактировать</button>
+                    <a role="button" href="{{ url_for('add_recipe', rid=recipe.id)}}" class="btn btn-secondary">Редактировать</a>
                 </div>
             </div>
         </div>
