--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -36,9 +36,11 @@
                             </div>
                         </div>
                     </div>
+                    {% if addition %}
                     <div class="row">
                         <div class="col">Дополнение: {{ recipe_info.addition }}</div>
                     </div>
+                    {% endif %}
                 </div>
 
                 <div class="container">
